# 3D-TRTRIS

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
libs/include/: Profiler.hpp  Random.hpp
src/: Background.cpp  Bag.cpp  CMakeLists.txt  Camera.cpp  Cell.cpp  Cube.cpp  Grid.cpp  Input.cpp  Piece.cpp  PieceType.cpp  Pieces.cpp  UI.cpp  main.cpp
src/headers/: Background.hpp  Bag.hpp  Camera.hpp  Cell.hpp  Cube.hpp  Grid.hpp  Input.hpp  Options.hpp  PieceOffsets.hpp  PieceType.hpp  Pieces.hpp  UI.hpp  Wallkicks.hpp
unused/: symbol.cpp
